cabal-version:      3.0
name:               sshgen
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           System
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sshgen
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        deepseq,
        filepath,
        optparse-applicative,
        process,
        temporary,
        unix
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
