cabal-version:      3.0
name:               tmply
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           System
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tmply
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        attoparsec,
        base ^>=4.17.2.1,
        bytestring,
        directory,
        optparse-applicative,
        process,
        temporary,
        vector
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
